[gd_scene load_steps=16 format=3 uid="uid://cqegoxve6kb63"]

[ext_resource type="Script" path="res://entities/black_arm/black_hand/black_hand.gd" id="1_c1ty3"]
[ext_resource type="Texture2D" uid="uid://d2cpo8mrghh3a" path="res://assets/000.png" id="2_u26yr"]
[ext_resource type="Script" path="res://components/state_machine/state_machine.gd" id="3_0x0ae"]
[ext_resource type="Script" path="res://components/state_machine/idle_state.gd" id="4_tenro"]
[ext_resource type="Script" path="res://components/state_machine/seek_state.gd" id="5_pl6rd"]
[ext_resource type="Script" path="res://components/state_machine/attack_state.gd" id="6_sg6el"]
[ext_resource type="Script" path="res://components/top_down_holder.gd" id="7_nokr4"]
[ext_resource type="Script" path="res://components/state_machine/retreat_state.gd" id="7_rcuv6"]
[ext_resource type="Script" path="res://entities/ghost/label.gd" id="9_6ihvd"]
[ext_resource type="Script" path="res://components/combat/skills/tick.gd" id="9_jituk"]
[ext_resource type="Script" path="res://components/combat/hurt_box.gd" id="11_xgr1e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sbtt0"]
radius = 8.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yncp3"]
radius = 12.0

[sub_resource type="LabelSettings" id="LabelSettings_tep7l"]
font_size = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_yt8rc"]

[node name="BlackHand" type="CharacterBody2D" node_paths=PackedStringArray("attack", "stateMachine")]
z_index = 1
script = ExtResource("1_c1ty3")
attack = NodePath("WeaponHolder/Tick")
stateMachine = NodePath("StateMachine")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_u26yr")
hframes = 8
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_sbtt0")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_0x0ae")
initial_state = NodePath("idle_state")

[node name="idle_state" type="Node2D" parent="StateMachine"]
script = ExtResource("4_tenro")

[node name="seek_state" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("navigationAgent", "skills")]
script = ExtResource("5_pl6rd")
navigationAgent = NodePath("../../NavigationAgent2D")
speed = 20.0
skills = [NodePath("../../WeaponHolder/Tick")]

[node name="attack_state" type="Node2D" parent="StateMachine"]
script = ExtResource("6_sg6el")

[node name="retreat_state" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("navigationAgent")]
script = ExtResource("7_rcuv6")
navigationAgent = NodePath("../../NavigationAgent2D")

[node name="WeaponHolder" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("7_nokr4")
actor = NodePath("..")

[node name="Tick" type="Area2D" parent="WeaponHolder" node_paths=PackedStringArray("collisionShape2D", "emitter")]
collision_layer = 0
collision_mask = 0
script = ExtResource("9_jituk")
collisionShape2D = NodePath("CollisionShape2D")
emitter = NodePath("../..")
range = 16.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHolder/Tick"]
shape = SubResource("CircleShape2D_yncp3")
debug_color = Color(0.905882, 0.247059, 0.305882, 0.419608)

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("stateMachine")]
offset_left = -18.0
offset_top = -32.0
offset_right = 22.0
offset_bottom = -9.0
label_settings = SubResource("LabelSettings_tep7l")
horizontal_alignment = 1
script = ExtResource("9_6ihvd")
stateMachine = NodePath("../StateMachine")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 0.1
navigation_layers = 2
avoidance_enabled = true
max_speed = 20.0
avoidance_layers = 4
avoidance_mask = 4
debug_path_custom_color = Color(1, 0.0823529, 1, 1)

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("11_xgr1e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_yt8rc")
